--- a/index.html
+++ b/index.html
@@ -84,13 +84,20 @@
 
         <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
         <p>
-          You are the person I have been dreaming all my life , so allow me to
+<!--           You are the person I have been dreaming all my life , so allow me to
           express my intense love for you. You are the most precious thing in my
           life. You have fascinated my heart and seized my mind with your
           magnetic presence and I keep dreaming of yourself Your memories are
           invaluable treasure of my life, which are locked inside my heart. The
           time spent with you was the most mesmerizing and delightful of my
-          life. <br />
+          life.  -->
+           From the moment we connected, something extraordinary sparked within me.
+          Your presence, even through a screen, has captured my heart and mind in
+          ways I never expected. Every conversation with you feels like a treasure,
+          and the thought of you continues to brighten my days. You are truly a rare
+          and precious person in my life, and I feel incredibly grateful for the bond we share,
+          even if it’s just the beginning. I look forward to what the future holds,
+          with you being such a special part of it. <br />
           <br />
           I take this opportunity to ask for your consent if you want to be my
           life partner.This letter is a token of my love for you. <br />
